; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckLabV2encoding.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckLabV2encoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckLabV2encoding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckLabV2encoding() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [3 x i32], align 4
  %5 = alloca [3 x i32], align 4
  %6 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %39, %0
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 65535
  br i1 %9, label %10, label %42

10:                                               ; preds = %7
  %11 = load i32, i32* %3, align 4
  %12 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 2
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 1
  store i32 %11, i32* %13, align 4
  %14 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  store i32 %11, i32* %14, align 4
  %15 = call i32 (...) @DbgThread()
  %16 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %17 = call i32 @cmsLabEncoded2FloatV2(i32 %15, i32* %6, i32* %16)
  %18 = call i32 (...) @DbgThread()
  %19 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  %20 = call i32 @cmsFloat2LabEncodedV2(i32 %18, i32* %19, i32* %6)
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %35, %10
  %22 = load i32, i32* %2, align 4
  %23 = icmp slt i32 %22, 3
  br i1 %23, label %24, label %38

24:                                               ; preds = %21
  %25 = load i32, i32* %2, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %3, align 4
  %30 = icmp ne i32 %28, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %24
  %32 = load i32, i32* %1, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %1, align 4
  br label %34

34:                                               ; preds = %31, %24
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %2, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %2, align 4
  br label %21

38:                                               ; preds = %21
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %3, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %3, align 4
  br label %7

42:                                               ; preds = %7
  %43 = load i32, i32* %1, align 4
  %44 = icmp eq i32 %43, 0
  %45 = zext i1 %44 to i32
  ret i32 %45
}

declare dso_local i32 @cmsLabEncoded2FloatV2(i32, i32*, i32*) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @cmsFloat2LabEncodedV2(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
